@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-04-20 13:44
+// This file was generated on 2010-04-21 16:40
 
 $extensionPath = t3lib_extMgm::extPath('feuserregister');
 return array(
@@ -29,6 +29,7 @@ return array(
 	'tx_feuserregister_transformer_htmlspecialchars' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_htmlspecialchars.php',
 	'tx_feuserregister_transformer_md5' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_md5.php',
 	'tx_feuserregister_transformer_nl2br' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_nl2br.php',
+	'tx_feuserregister_transformer_saltedpasswords' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_saltedpasswords.php',
 	'tx_feuserregister_transformer_striptags' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_striptags.php',
 	'tx_feuserregister_transformer_t3sec_saltedpw' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_t3sec_saltedpw.php',
 	'tx_feuserregister_transformer_timestamp' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_timestamp.php',
